# obmc-yadro-lsinventory

./: .clang-format  README.md  meson.build  meson_options.txt
src/: inventory.cpp  inventory.hpp  main.cpp  printer.cpp  printer.hpp  version.hpp.in
test/: inventory_test.cpp  meson.build
