# Object mapper
option('mapper-service',
       type: 'string',
       value: 'xyz.openbmc_project.ObjectMapper',
       description: 'Object mapper service')
option('mapper-path',
       type: 'string',
       value: '/xyz/openbmc_project/object_mapper',
       description: 'Object mapper path')
option('mapper-iface',
       type: 'string',
       value: 'xyz.openbmc_project.ObjectMapper',
       description: 'Object mapper interface')

# Inventory manager
option('inventory-path',
       type: 'string',
       value: '/xyz/openbmc_project/inventory',
       description: 'Root path of inventory objects')
option('inventory-iface',
       type: 'string',
       value: 'xyz.openbmc_project.Inventory.Decorator.Asset',
       description: 'Common interface of inventory objects')

# Unit tests support
option('tests',
       type: 'feature',
       description: 'Build tests')

option('remote-host-support',
       type: 'feature',
       value: 'disabled',
       description: 'Remote host support')

option('use-vegman-hack',
       type: 'feature',
       value: 'disabled',
       description: 'Use VEGMAN-specific hack to get inventory')

option('em-service', type: 'string',
       value: 'xyz.openbmc_project.EntityManager',
       description: 'Entity Manager service name')
option('em-root-path', type: 'string', value: '/',
       description: 'Root path of Entity Manager')
option('smbios-service', type: 'string',
       value: 'xyz.openbmc_project.Smbios.MDR_V2',
       description: 'SMBIOS MDR_V2 serivce name')
option('smbios-root-path', type: 'string',
       value: '/xyz/openbmc_project/inventory',
       description: 'SMBIOS MDR_V2 service root path')
option('pcie-service', type: 'string', value: 'xyz.openbmc_project.PCIe',
       description: 'PECI-PCIE serivce name')
option('pcie-root-path', type: 'string', value: '/',
       description: 'PECI-PCIE service root path')
option('storage-service', type: 'string', value: 'com.yadro.Storage',
       description: 'Storage Manager service name')
option('storage-root-path', type: 'string', value: '/',
       description: 'Storage Manager service root path')
option('network-adapter-service', type: 'string',
       value: 'com.yadro.NetworkAdapter',
       description: 'Host\'s Network Adapters Manager service')
option('network-adapter-root-path', type: 'string', value: '/',
       description: 'Host\'s Network Adapters Manager service root path')

